# wallrust

./: .gitignore  Cargo.toml  GENERATION.md  LICENSE  Makefile  Makefile.toml  README.md  Templating.md  cargo-make.toml  default.nix  flake.nix
.github/workflows/: release.yml
docs/: WALLRUST_TEMPLATING_TUTORIAL.md
examples/: README-template.md  kitty-theme-example.conf  kitty-theme.conf  polybar-colors.ini  wallrust.html
src/: cache.rs  cli.rs  config.rs  error.rs  html.rs  imagemagick.rs  main.rs  output.rs  palette.rs  wallpaper.rs
templates/: README.md  gen-html.go
