[package]
name = "wallrust"
version = "1.0.2"
edition = "2024"
authors = ["prime-run <prime0run@gmail.com>"]
description = "a blazingly fast and feature-rich tool extract color palettes from images"
license-file = "LICENSE"
homepage = "https://github.com/prime-run/wallrust"
repository = "https://github.com/prime-run/wallrust"
readme = "README.md"
keywords = [
	"theme-generator",
	"colorscheme",
	"wallpaper",
	"image-colors",
	"color-extractor",
]
categories = [
	"command-line-utilities",
	"multimedia::images",
	"template-engine",
	"graphics",
]
exclude = ["templates/", "wallbash/"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
regex = "1.10"
lazy_static = "1.4"
anyhow = "1.0"
thiserror = "1.0"
shellexpand = "3.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
tera = "1.19"
sha2 = "0.10"
hex = "0.4"
dirs = "5.0"
ordered-float = "4.2"


# hyprland-ipc-rs = "..."
